basic db version complete

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /REST_APIs_First/__pycache__
 /Flask-restful-section/__pycache__
 /Flask-restful-section/venv
+/REST_APIs_with_db/venv
+/REST_APIs_with_db/__pycache__
