init token refreshing

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ Jose/sql-alchemy-section/__pycache__
 Jose/sql-alchemy-section/venv
 Jose/SQL-alchemy-section/resources/__pycache__
 Jose/SQL-alchemy-section/models/__pycache__
+Brad/flask_sqlalchemy_rest/venv/
+Jose/Token_Refreshing_Jwt_extended/__pycache__
+Jose/Token_Refreshing_Jwt_extended/venv
+Jose/Token_Refreshing_Jwt_extended/resources/__pycache__
+Jose/Token_Refreshing_Jwt_extended/models/__pycache__
