Unittest course project setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,4 @@
-Jose/REST_APIs_First/venv
-/Andrei/venv
+venv/
 .vscode
 .pytest_cache
-/Andrei/__pycache__
-Jose/REST_APIs_First/__pycache__
-Jose/Flask-restful-section/__pycache__
-Jose/Flask-restful-section/venv
-Jose/REST_APIs_with_db/venv
-Jose/REST_APIs_with_db/__pycache__
-Jose/sql-alchemy-section/__pycache__
-Jose/sql-alchemy-section/venv
-Jose/SQL-alchemy-section/resources/__pycache__
-Jose/SQL-alchemy-section/models/__pycache__
-Brad/flask_sqlalchemy_rest/venv/
-Jose/Token_Refreshing_Jwt_extended/__pycache__
-Jose/Token_Refreshing_Jwt_extended/venv
-Jose/Token_Refreshing_Jwt_extended/resources/__pycache__
-Jose/Token_Refreshing_Jwt_extended/models/__pycache__
+*.pyc
