--- a/Jose/advanced_email/pyproject.toml
+++ b/Jose/advanced_email/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Paweł Benkowski <pawlo97.pb@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.23.0"
+python-dotenv = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
